# posthog.com

./: .babelrc  .codespellignore  .env.development  .env.production  .eslintignore  .eslintrc.json  .gitignore  .imgbotconfig  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  .vale.ini  .vercelignore  .yarnrc  5-reasons-we-are-focused-on-nailing-funnels.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.MD  EVENTS_PAGE_README.md  LICENSE  MONOREPO_DOCS_POC_SETUP.md  Makefile  README-OS.md  README.md  SECURITY.md  STYLEGUIDE.md  WARP.md  _redirects  cleanup-packages.js  errors.txt  gatsby-browser.js  gatsby-browser.tsx  gatsby-config-exports.js  gatsby-config.js  gatsby-node.js  gatsby-node.ts  gatsby-ssr.js  greptile.json  how-we-do-hiring-and-hr-at-posthog.md  import-images.mjs  (+24 more)
.claude/: launch.json  settings.json  settings.local.json  style-guide.md
.devcontainer/: devcontainer.json
scripts/hogfm/: .env.example  README.md  main.py  pyproject.toml  sync_s3_to_podbean.py
scripts/hogfm/changehog/: command.py
scripts/hogfm/handbook/: ALLOWED_FILES_MODE.md  CHANGE_DETECTION.md  COST_CALCULATION_UPDATE.md  COST_TRACKING.md  DIRECTORY_MODE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_START_COST_TRACKING.md  README.md  S3_SETUP.md  S3_UPLOAD_UPDATE.md  TEST_RESULTS.md  __init__.py  audio_saver.py  elevenlabs_client.py  file_selector.py  generate.py  markdown_processor.py  regenerate_costs.py  s3_uploader.py
scripts/hogfm/handbook_audio/: QUICKSTART.md  README.md  S3_SETUP.md  __init__.py  elevenlabs_client.py  file_selector.py  generate.py  s3_uploader.py
(+9005 files in other folders)
