[project]
name = "hogfm"
version = "0.1.0"
description = "PostHog audio generation toolkit for handbook and other content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.0",
    "elevenlabs>=2.23.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
handbook-audio = "handbook_audio.generate:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handbook_audio"]
